[project]
name = "mcp-metricool"
version = "1.2.0"
description = "This is a Model Context Protocol (MCP) server for interacting with the Metricool API. It allows AI agents to access and analyze social media metrics and campaign data from your Metricool account."
readme = "README.md"
authors = [
    { name = "Laura Esteban", email = "lauraesteban@metricool.com" },
    { name = "David Gonzalez", email = "davidgonzalez@metricool.com" },
    { name = "Vicent Martí", email = "vicentmarti@metricool.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli,http]>=1.6.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.scripts]
mcp-metricool = "mcp_metricool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
